--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -79,7 +79,6 @@ search-bar input {
 }
 
 .img-logo h2 {
-  /* padding-top:15px; */
   font-weight: bold;
   font-size: 21px;
   color: #ffffff;
@@ -128,12 +127,15 @@ main .grid-container {
   display: grid;
   align-items :center;
 }
+ .main-content .content-title {
+  padding-left: 20px;
+ }
 
 .main-content .note-list {
   display : grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
-  margin: 10px;
+  margin: 20px;
 }
 .main-content .note-list > * {
   padding: 5px 15px;
@@ -148,6 +150,11 @@ main .grid-container {
     color:salmon;
     
   }
+  button {
+    border:none;
+    background:unset;
+    cursor:pointer;
+  }
   line-height: 30px;
 }
 
@@ -156,8 +163,10 @@ main .grid-container {
   grid-template-columns: 110px auto;
   text-overflow:ellipsis;
 }
+
+
 .text-format-body::before {
-  content: "Deskripsi ";
+  content: "Deskripsi : ";
   content : ""
   text-align : right;
   font-weight: bold;
@@ -168,11 +177,64 @@ main .grid-container {
   grid-template-columns: 110px auto;
 }
 .text-format-date::before {
-  content: "Time Stamp ";
+  content: "Time Stamp :";
   content : ""
   text-align : right;
   font-weight: bold;
   padding-right: 0px;
+}
+
+.tooltip-text {
+  position: fixed;
+  background:rgba(8, 8, 8, 0.59);
+  color: #ffffff;
+  padding: 5px 10px;
+  border-radius: 6px;
+  white-space: nowrap;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+  z-index: 1000;
+  pointer-events: none;
+  font-weight: bold;
+}
+
+.tooltip-text::after {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-width: 5px;
+  border-style: solid;
+  border-color: rgba(8, 8, 8, 0.59)transparent transparent transparent;
+}
+
+footer {
+  background-color:salmon;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  font-size: 14px;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+.footer-contact a {
+  color:rgb(82, 3, 3);
+  text-decoration: none;
+}
+
+.footer-contact a:hover {
+  text-decoration: underline;
+}
+.delete-button:hover{
+  color: red;
 }
 
 @keyframes spin {
@@ -208,11 +270,9 @@ main .grid-container {
 
 @keyframes fadeIn {
   from {
-    /* transform: scale(1.2); */
     opacity: 0;
   }
   to {
     opacity: 1;
-    /* visibility: hidden; */
   }
 }
