--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -157,14 +157,7 @@ main .grid-container {
   text-wrap: wrap;
 }
 
-.loading-circle {
-  width: 40px;
-  height: 40px;
-  margin: 20px auto;
-  border: 5px solid #ccc;
-  border-top-color: #09f;
-  border-radius: 50%;
-}
+
 
 .note-list > .note-item-list {
   h3 {
@@ -292,10 +285,36 @@ footer {
   color: rgb(3, 138, 14);
 }
 
+.fetch-page-loading {
+  position: fixed;
+  top: 30%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.2); /* semi-transparent white */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 4rem;
+  z-index: 9999;
+}
+
+.loading-circle {
+  width: 40px;
+  height: 40px;
+  margin: 20px auto;
+  border: 5px solid #ccc;
+  border-top-color: #09f;
+  border-radius: 50%;
+  /* z-index: 999; */
+}
+
 .loader-text-container {
+  height: 8%;
   gap: 2rem;
   display: flex;
   justify-content: center;
+  align-items: center;
   z-index: 999;
   font-weight: bold;
   font-size: 21px;
@@ -312,6 +331,13 @@ footer {
   background-size: 300% 300%;
   animation: moveGradient 2s infinite linear;
 }
+
+#blur {
+  filter: blur(5px);
+  pointer-events: none;
+}
+
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
